fix(menu-mobile): Adicionando z-index no menu

--- a/css/sass/menu-mobile.scss
+++ b/css/sass/menu-mobile.scss
@@ -175,4 +175,5 @@
     visibility: visible;
     left: 0;
     position: fixed;
+    z-index: 9999;
 }
